--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
     <div class="fundo-coracoes"></div>
 
     <div class="container">
@@ -34,7 +35,7 @@
         </div>
         </div>
         
-        
+        <script src="Script.js"></script>
 </body>
 
 </html>
