--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
 
     <div class="container">
 
-        <img src="logo maior.png" alt="Logo" class="avatar">
+        <img src="logosvg1.svg" alt="Logo" class="avatar">
 
         <h1>Delicias no Pote</h1>
         
