--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <h1>Delicias no Pote</h1>
         
-        <h2>Produçao Artesanal</h2>
+        <h2>Produção Artesanal</h2>
 
         <div class="botoes">
 
