proprietária da microempresa atualizou a logo, modificação do código

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delicias no Pote</title>
-    <link rel="shortcut icon" href="favicon wee.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="faviconpudim.ico" type="image/x-icon">
     <link rel="stylesheet" href="Style.css">
 </head>
 
@@ -15,7 +15,7 @@
 
     <div class="container">
 
-        <img src="logosvg1.svg" alt="Logo" class="avatar">
+        <img src="LOGOSVG.svg" alt="Logo" class="avatar">
 
         <h1>Delicias no Pote</h1>
         
