--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="botoes">
 
-        <a href="https://drive.google.com/file/d/1LzoD4Zgzp6bOj5NNmcn2ajFSK6lDq0gm/view?usp=sharing" 
+        <a href="https://drive.google.com/file/d/1FwSLwG5FumTSJDEZLTXHAWqkScmRPQS-/view?usp=drive_link" 
         class="botao" target="_blank">CARDÁPIO</a>
 
         <a href="https://wa.link/z1na4j" class="botao" 
