Alteração do número de WhatsApp

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="https://drive.google.com/file/d/1sldgnaPwjRbwMLIp8rTZvm3A9NrhHBW0/view?usp=sharing" 
         class="botao" target="_blank">CARDÁPIO</a>
 
-        <a href="https://wa.link/z1na4j" class="botao" 
+        <a href="https://wa.link/3zuse8" class="botao" 
         target="_blank">WHATSAPP</a>
 
         <a href="https://www.instagram.com/deliciasnopote1904?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" 
