Correção no link para o Instagram

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="https://wa.link/3zuse8" class="botao" 
         target="_blank">WHATSAPP</a>
 
-        <a href="https://www.instagram.com/deliciasnopote1904?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" 
+        <a href="https://www.instagram.com/deliciasnopote.rm?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" 
         class="botao" target="_blank">INSTAGRAM</a>
 
         </div>
