--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 
         <div class="botoes">
 
-        <a href="https://drive.google.com/file/d/1U9gs5Tqzo6oDtfty065cY_iw5ybX6Fa2/view?usp=sharing 
-        class="botao" target="_blank">CARDÁPIO</a>
+        <a href="https://drive.google.com/file/d/1U9gs5Tqzo6oDtfty065cY_iw5ybX6Fa2/view?usp=sharing" class="botao" target="_blank">CARDÁPIO</a>
 
         <a href="https://wa.link/3zuse8" class="botao" 
         target="_blank">WHATSAPP</a>
